--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: helping-hand-backend_production
+  url: redistogo-regular-13583
+  # channel_prefix: helping-hand-backend_production
