--- a/config/cable.yml
+++ b/config/cable.yml
@@ -9,7 +9,14 @@ test:
 #   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
 #   channel_prefix: helping-hand-backend_production
 
+# production:
+#   adapter: redis
+#   url: redistogo-regular-13583
+#   channel_prefix: helping-hand-backend_production
+
 production:
   adapter: redis
-  url: redistogo-regular-13583
+  url: redis://localhost:6379/1
   # channel_prefix: helping-hand-backend_production
+
+  redis://localhost:6379
