--- a/config/cable.yml
+++ b/config/cable.yml
@@ -19,4 +19,4 @@ production:
   url: redis://localhost:6379/1
   # channel_prefix: helping-hand-backend_production
 
-  redis://localhost:6379
+  # redis://localhost:6379
