--- a/config/cable.yml
+++ b/config/cable.yml
@@ -16,7 +16,7 @@ test:
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://helpping-hand.herokuapp.com:6379/1
   # channel_prefix: helping-hand-backend_production
 
   # redis://localhost:6379
