--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,19 +4,17 @@ development:
 test:
   adapter: async
 
-# production:
-#   adapter: redis
-#   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-#   channel_prefix: helping-hand-backend_production
-
 production:
   adapter: redis
-  url: redistogo-regular-13583
+  url: <%= ENV.fetch("REDISTOGO_URL") { "redis://localhost:6379/1" } %>
+  channel_prefix: helping-hand-backend_production
+
+# production:
+#   adapter: redis
+#   url: redistogo-regular-13583
 #   channel_prefix: helping-hand-backend_production
 
 # production:
 #   adapter: redis
 #   url: redis://helpping-hand.herokuapp.com:6379/1
   # channel_prefix: helping-hand-backend_production
-
-  # redis://localhost:6379
